attached_assets/Pasted--added-1-package-and-audited-579-packages-in-3s-102-packages-are-looking-for-funding-run-npm-fu-1744668487471.txt

added 1 package, and audited 579 packages in 3s

102 packages are looking for funding
  run `npm fund` for details

13 low severity vulnerabilities

To address issues that do not require attention, run:
  npm audit fix

Some issues need review, and may require choosing
a different dependency.

Run `npm audit` for details.
beastvoldy@Beasts-MacBook-Air contracts % cd ..
beastvoldy@Beasts-MacBook-Air defiprogess % pwd
/Users/beastvoldy/Downloads/defi1-main/defiprogess
beastvoldy@Beasts-MacBook-Air defiprogess % cd ..
beastvoldy@Beasts-MacBook-Air defi1-main % cd defiprogess/contracts && npx hardhat run scripts/deploy-and-mint.js --network localhost
Compiled 15 Solidity files successfully (evm target: paris).
Deploying contracts and initializing tokens...
Deployer address: 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
Test accounts:
User1: 0x70997970C51812dc3A010C7d01b50e0d17dc79C8
User2: 0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC
User3: 0x90F79bf6EB2c4f870365E785982E1f101E93b906

Deploying TokenSwap...
TokenSwap deployed to: 0x5FbDB2315678afecb367f032d93F642f64180aa3

Deploying SpotTrading...
SpotTrading deployed to: 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512

Deploying mock tokens...
ETH Token deployed to: 0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0
USDT Token deployed to: 0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9
BTC Token deployed to: 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9
LINK Token deployed to: 0x5FC8d32690cc91D4c39d9d3abcBD16989F875707

All contracts deployed successfully!

Contract Addresses:
TOKEN_SWAP: 0x5FbDB2315678afecb367f032d93F642f64180aa3
SPOT_TRADING: 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
ETH: 0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0
USDT: 0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9
BTC: 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9
LINK: 0x5FC8d32690cc91D4c39d9d3abcBD16989F875707

Adding tokens to TokenSwap...
Tokens added to TokenSwap

Adding tokens to SpotTrading...
Tokens added to SpotTrading

Setting exchange rates...
Exchange rates set

Minting tokens to test accounts...
Minting to deployer: 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
Minting to user1: 0x70997970C51812dc3A010C7d01b50e0d17dc79C8
Minting to user2: 0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC
Minting to user3: 0x90F79bf6EB2c4f870365E785982E1f101E93b906
All tokens minted successfully

Verifying token balances...
Deployer balances:
ETH: 50.0
BTC: 2.0
USDT: 100000.0
LINK: 5000.0

User1 balances:
ETH: 20.0
BTC: 0.75
USDT: 50000.0
LINK: 2000.0

Contract addresses saved to contract-addresses.json

Deployment, initialization, and minting complete!
beastvoldy@Beasts-MacBook-Air contracts % cd ..
beastvoldy@Beasts-MacBook-Air defiprogess % pwd
/Users/beastvoldy/Downloads/defi1-main/defiprogess
beastvoldy@Beasts-MacBook-Air defiprogess % cd ..
beastvoldy@Beasts-MacBook-Air defi1-main % cd defiprogess && npx vite --host 0.0.0.0 --port 5000
error when starting dev server:
Error: Port 5000 is already in use
    at Server.onError (file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:45596:18)
    at Server.emit (node:events:517:28)
    at emitErrorNT (node:net:1844:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21)
beastvoldy@Beasts-MacBook-Air defiprogess % npx vite --host 0.0.0.0 --port 5000 
error when starting dev server:
Error: Port 5000 is already in use
    at Server.onError (file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:45596:18)
    at Server.emit (node:events:517:28)
    at emitErrorNT (node:net:1844:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21)
beastvoldy@Beasts-MacBook-Air defiprogess % npx vite --host 0.0.0.0 --port 5001

  VITE v5.4.14  ready in 135 ms

  ➜  Local:   http://localhost:5001/
  ➜  Network: http://192.168.0.104:5001/
  ➜  press h + enter to show help
node:internal/process/promises:288
            triggerUncaughtException(err, true /* fromPromise */);
            ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /Users/beastvoldy/Downloads/defi1-main/defiprogess/client): [Error] Loading PostCSS Plugin failed: Cannot find module '@tailwindcss/postcss'
Require stack:
- /Users/beastvoldy/Downloads/defi1-main/defiprogess/postcss.config.js

(@/Users/beastvoldy/Downloads/defi1-main/defiprogess/postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module '@tailwindcss/postcss'
Require stack:
- /Users/beastvoldy/Downloads/defi1-main/defiprogess/postcss.config.js

(@/Users/beastvoldy/Downloads/defi1-main/defiprogess/postcss.config.js)
    at load (file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33632:11)
    at file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33656:8)
    at processResult (file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33726:14)
    at file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33856:14]

Node.js v18.20.8
beastvoldy@Beasts-MacBook-Air defiprogess % npx vite --host 0.0.0.0 --port 5005

  VITE v5.4.14  ready in 129 ms

  ➜  Local:   http://localhost:5005/
  ➜  Network: http://192.168.0.104:5005/
  ➜  press h + enter to show help
node:internal/process/promises:288
            triggerUncaughtException(err, true /* fromPromise */);
            ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /Users/beastvoldy/Downloads/defi1-main/defiprogess/client): [Error] Loading PostCSS Plugin failed: Cannot find module '@tailwindcss/postcss'
Require stack:
- /Users/beastvoldy/Downloads/defi1-main/defiprogess/postcss.config.js

(@/Users/beastvoldy/Downloads/defi1-main/defiprogess/postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module '@tailwindcss/postcss'
Require stack:
- /Users/beastvoldy/Downloads/defi1-main/defiprogess/postcss.config.js

(@/Users/beastvoldy/Downloads/defi1-main/defiprogess/postcss.config.js)
    at load (file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33632:11)
    at file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33656:8)
    at processResult (file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33726:14)
    at file:///Users/beastvoldy/Downloads/defi1-main/defiprogess/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33856:14]

Node.js v18.20.8
beastvoldy@Beasts-MacBook-Air defiprogess %